# github-stats

./: .env  .eslintrc.js  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  README.md  babel.config.json  config.js  constant.js  exportUtils.js  getRepo.sh  jest.config.js  jest.config.json  package-lock.json  package.json  pyproject.toml  report.js  stats.js  tsconfig.json
reports/: Open PRs_20230617T210254056Z.xlsx  Open PRs_20230617T210358802Z.xlsx  Open PRs_20230617T210802929Z.xlsx  Open PRs_20230618T222349010Z.xlsx
src/: config.example.json  config.js  config.ts  constant.js  constant.ts  exporter.js  github.js  index.js  report.js  report.ts  reportGenerator.js  stats.js  stats.py
src/utils/: exportUtils.js  exportUtils.ts  githubUtils.js  githubUtils.ts  reportUtils.js  reportUtils.ts
tests/: reportUtils.test.js  reportUtils.test.ts
utils/: exportUtils.js  githubUtils.js  reportUtils.js
